# Katarenga

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp  shell.nix
cmake/Modules/: FindGLTK.cmake  FindZMQ.cmake  FindZMQPP.cmake  Finddocopt.cmake
config/: server.cfg
src/: Board.cpp  Board.hpp  Cell.hpp  MessageWrapper.cpp  MessageWrapper.hpp  Piece.hpp  graphics.cpp  graphics.hpp  katarenga.cpp  katarenga.hpp  main.cpp  network.cpp  network.hpp  network_utils.cpp  network_utils.hpp  player.cpp  player.hpp  server.cpp  server.hpp  server_communication.cpp  server_communication.hpp  standalone.cpp  standalone.hpp  utils.cpp  utils.hpp
src/client/: CMakeLists.txt
src/client/app/: BoardEntity.cpp  BoardEntity.hpp  BoardRenderEntity.cpp  BoardRenderEntity.hpp  CMakeLists.txt  PawnEntity.cpp  PawnEntity.hpp  PawnRenderEntity.cpp  PawnRenderEntity.hpp  main.cpp
src/client/src/client/: application.cpp  application.hpp  client.cpp  client.hpp  client_utils.cpp  client_utils.hpp  game.cpp  game.hpp  main.cpp  player.hpp  standalone.cpp  utils.hpp
src/client/src/client/messages/: client_messages.cpp  client_messages.hpp
src/client/src/client/sockets/: application_socket.cpp  application_socket.hpp  connection_socket.cpp  server_socket.cpp  worker_socket.cpp  worker_socket.hpp
src/common/: CMakeLists.txt  shared_utils.cpp  shared_utils.hpp
src/common/board/: Board.cpp  Piece.cpp  board_utils.cpp  board_utils.hpp
src/common/messages/: BoardConfigMessage.cpp  BoardConfigMessage.hpp  CMakeLists.txt  CaseClicked.cpp  CheckConnectivity.cpp  CheckConnectivity.hpp  GameStatus.cpp  GameStatus.hpp  MessageReactor.cpp  MessageReactor.hpp  MessageWrapper.hpp  MoveMessage.cpp  MoveMessage.hpp  OtherMessage.cpp  OtherMessage.hpp  QuitMessage.cpp  QuitMessage.hpp  ReplyConnectivity.cpp  ReplyConnectivity.hpp  message_utils.hpp
src/common/src/common/: common_utils.cpp  common_utils.hpp  shared_utils.cpp  shared_utils.hpp
src/common/src/common/board/: Board.cpp  Board.hpp  Cell.cpp  Cell.hpp  Piece.cpp  Piece.hpp  board_utils.cpp  board_utils.hpp
src/common/src/common/engines/: pair_engine.cpp  pair_engine.hpp  reply_engine.cpp  reply_engine.hpp  request_engine.cpp  request_engine.hpp
src/common/src/common/messages/: message.cpp  message.hpp  messages.cpp  messages.hpp
src/common/src/common/sockets/: abstract_socket.cpp  abstract_socket.hpp  pair_socket.cpp  pair_socket.hpp  reply_socket.cpp  reply_socket.hpp  request_socket.cpp  request_socket.hpp
src/katarenga/: AbstractServer.cpp  AbstractServer.hpp  CMakeLists.txt  LocalServer.cpp  LocalServer.hpp  RemoteServer.cpp  RemoteServer.hpp  graphics.cpp  graphics.hpp  katarenga.cpp  katarenga.hpp  network_utils.hpp  player.cpp  player.hpp  server_communication.cpp  server_communication.hpp  standalone.hpp  utils.cpp  utils.hpp
src/katarenga/src/katarenga/: client.cpp  client.hpp  client_utils.cpp  client_utils.hpp  game.cpp  game.hpp  graphics.cpp  main.cpp
src/katarenga/src/katarenga/sockets/: connection_socket.cpp  connection_socket.hpp  server_socket.cpp  server_socket.hpp
src/message/: BoardConfigMessage.cpp  BoardConfigMessage.hpp  BoardConfiguration.cpp  CMakeLists.txt  CaseClicked.cpp  CaseClicked.hpp  CheckConnectivity.cpp  CheckConnectivity.hpp  MessageReactor.cpp  MessageReactor.hpp  MessageWrapper.cpp  MessageWrapper.hpp  MoveMessage.cpp  MoveMessage.hpp  OtherMessage.cpp  OtherMessage.hpp  PlayThisMove.cpp  PlayThisMove.hpp  QuitMessage.cpp  QuitMessage.hpp  message_utils.hpp
src/message_utils/: BoardConfiguration.cpp  BoardConfiguration.hpp  CMakeLists.txt  CheckConnectivity.cpp  CheckConnectivity.hpp  MessageWrapper.hpp  message_utils.hpp
src/server/: Board.cpp  Board.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Piece.cpp  Piece.hpp  katarenga_server.cpp  server.cpp  server.hpp  server_utils.cpp  server_utils.hpp  utils.cpp  utils.hpp
src/server/src/server/: client_registry.cpp  client_registry.hpp  game.cpp  game.hpp  game_registry.cpp  game_registry.hpp  main.cpp  server.cpp  server.hpp  server_utils.cpp  server_utils.hpp
src/server/src/server/sockets/: connection_socket.cpp  connection_socket.hpp  player_socket.cpp  player_socket.hpp
